# django-basic-ddd-app

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: django.yml
api/application/services/: product_command.py  product_query.py  review_command.py
api/domain/entities/: product.py  review.py
api/domain/exceptions/: entity_not_exist_exception.py
api/domain/interfaces/: repository.py
api/domain/value_objects/: average_rating.py  name.py  review_count.py  user_id.py
api/infrastructure/: apps.py  django_repository.py
api/infrastructure/controller/: base_controller.py  create_product_controller.py  create_review_controller.py  list_products_controller.py
api/migrations/: 0001_initial.py
config/: settings.py  urls.py
django_basic_ddd_app/api/application/services/: product_command.py  product_query.py  review_command.py
django_basic_ddd_app/api/domain/entities/: product.py  review.py
django_basic_ddd_app/api/domain/interfaces/: repository.py
django_basic_ddd_app/api/domain/value_objects/: description.py  rating.py
django_basic_ddd_app/api/infrastructure/: django_repository.py  django_uow.py  models.py
django_basic_ddd_app/api/infrastructure/controller/: base_controller.py  create_product_controller.py  create_review_controller.py  list_products_controller.py
django_basic_ddd_app/config/: settings.py
test/unit/application/services/: __init__.py  test_product_command.py  test_product_query.py  test_review_command.py
test/unit/domain/domain/entities/: test_product.py  test_review.py
(+6 files in other folders)
