[tool.poetry]
name = "django-basic-ddd-app"
version = "0.1.0"
description = "Django Basic application using django-ddd"
authors = ["pablo-snz <pablo.snz.brm@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "django_basic_ddd_app"}]

[tool.poetry.dependencies]
python = "^3.11"
django-ddd = "^0.1.11"
django = "^4.2.1"
pyjwt = "^2.7.0"
djangorestframework = "^3.14.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
